[package]
name = "krpc-mars"
version = "0.8.0"
authors = ["cahu"]
build = "build.rs"
license = "GPL-3.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["net", "io-util"] }
tracing = "0.1.37"

[build-dependencies]
protobuf-codegen = "3.2.0"
